# primal

./: .gitignore  .gitmodules  CLAUDE.md  CmakeLists.txt  Makefile  README.md  psmtest  psmtest.cpp
.claude/: settings.local.json
.github/workflows/: build-publish.yml
R-package/: DESCRIPTION  NAMESPACE
R-package/R/: CompressedSensing_solver.R  Dantzig_generator.R  Dantzig_solver.R  PRIMAL-package.R  QuantileRegression_solver.R  SparseSVM_solver.R  coef.primal.R  plot.primal.R  print.primal.R
R-package/inst/doc/: vignette.Rnw
R-package/man/: CompressedSensing_solver.Rd  Dantzig_solver.Rd  PRIMAL-package.Rd  QuantileRegression_solver.Rd  SparseSVM_solver.Rd  coef.primal.Rd  plot.primal.Rd  print.primal.Rd
R-package/src/: Makevars  Makevars.in  init.c
include/PSM/: PLP.hpp  PSM.hpp  api.hpp  problems.hpp
lib/: libpsm.dylib
profiling/: benchmark.R  benchmark.py
python-package/: MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
python-package/Pypsm/: core.py  model.py  test.py
python-package/docs/: api.md  citation.md  index.md  installation.md  quickstart.md
python-package/docs/man/: PrimalResult.md  coef.md  compressed_sensing_solver.md  dantzig_solver.md  index.md  plot.md  quantile_regression_solver.md  sparse_svm_solver.md  summary.md  test.md
python-package/examples/: run_compressed_sensing.py  run_dantzig.py  run_quantile_regression.py  run_sparse_svm.py
python-package/pyprimal/: __init__.py  core.py  libpath.py  model.py
python-package/pyprimal/lib/: libpsm.dylib
python-package/tests/: test_solvers.py
src/: PLP.cpp  PSM.cpp  api.cpp  problems.cpp
tutorials/: tutorial.R  tutorial.ipynb
